# vec-collections

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: intervalseq.rs  set_comparison.rs  set_ops.rs  sort_dedup.rs
examples/: alloc.gnuplot  benches.rs  map_benches.rs  multimap.rs  nalloc.gnuplot  radix_db.rs  radix_db_arc.rs  radix_db_lazy.rs  radix_tree.rs  set_alloc.rs  set_alloc2.rs  set_benches.rs  set_union_interleaved.rs
flip-buffer/: Cargo.toml
flip-buffer/src/: lib.rs
src/: array_map.rs  array_seq.rs  array_set.rs  benches.rs  binary_merge.rs  btree_map.rs  checks.rs  dedup.rs  flip_buffer.rs  interval.rs  interval_seq.rs  iterators.rs  lib.rs  macros.rs  main.rs  merge_state.rs  obey.rs  radix_tree.rs  range_set.rs  small_vec_builder.rs  test_macros.rs  tests.rs  total_array_map.rs  total_array_seq.rs  total_array_set.rs  total_vec_map.rs  total_vec_seq.rs  total_vec_set.rs  vec_builder.rs  vec_map.rs  vec_seq.rs  vec_set.rs
src/flip_buffer/: mod.rs  small_vec_builder.rs
src/radix_tree/: arc_radix_tree.rs  flat_radix_tree.rs  lazy.rs  lazy_radix_tree.rs  mod.rs  radix_tree.rs  rkyv.rs  rkyv_support.rs
vec-set/: Cargo.toml  long.asm  short.asm
vec-set/examples/: benches.rs
vec-set/src/: array_map.rs  array_set.rs  binary_merge.rs  countable_interval_set.rs  dedup.rs  iterators.rs  lib.rs  merge_state.rs  range_set.rs  sonic_reducer.rs  test_macros.rs  total_array_map.rs  total_array_set.rs
