[package]
name = "vec-collections"
version = "0.4.3"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
description = "Rust collections that are newtype wrappers around smallvec"
repository = "https://github.com/rklaehn/vec-collections"
license = "MIT OR Apache-2.0"
keywords = ["succinct", "vector", "array", "smallvec"]
categories = ["data-structures"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/rklaehn"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(vec_collections_docsrs)'] }

[features]
default = ["inplace", "serde"]
inplace = []
total = []
radixtree = []
lazy_radixtree = ["parking_lot"]
rkyv_validated = ["rkyv", "bytecheck"]
std_support = []

[dependencies]
sorted-iter = "0.1"
num-traits = "0.2"
smallvec = "1"
serde = { version = "1", default-features = false, optional = true }
rkyv = { version= "0.7", optional = true }
bytecheck = { version = "0.6", optional = true }
parking_lot = { version = "0.12", optional = true }
lazy_static = "1.4"
binary-merge = "0.1"
inplace-vec-builder = { version = "0.1", features = ["smallvec"] }

[dev-dependencies]
quickcheck = "1.0"
maplit = "1.0.2"
quickcheck_macros = "1.0.0"
testdrop = "0.1.2"
rand = "0.8.5"
num-traits = "0.2.8"
serde_json = "1.0.41"
criterion = "0.3.0"
fnv = "1.0.7"
anyhow = "1.0"
stats_alloc = "0.1.8"
rkyv = { version = "0.7.19", features = ["validation", "smallvec"] }
hex = "0.4.3"
hexdump = "0.1.1"
futures = "0.3.17"
tokio = { version = "1.13.0", features = ["full"] }
obey = "0.1.0"

[[bench]]
name = "set_comparison"
# name = "sort_dedup"
harness = false

[[bench]]
name = "set_ops"
harness = false

[[example]]
name = "radix_db"
required-features = ["radixtree", "rkyv", "rkyv_validated"]

[[example]]
name = "radix_tree"
required-features = ["radixtree", "lazy_radixtree"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "vec_collections_docsrs"]

